[project]
name = "luau-lens"
version = "0.1.0"
description = "MCP server that gives AI agents instant Luau type checking and linting for Roblox development"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
luau-lens = "luau_lens.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/luau_lens"]
